src/test/ui/issue-13466.stderr
error[E0308]: mismatched types
  --> $DIR/issue-13466.rs:18:9
   |
LL |         Ok(u) => u,
   |         ^^^^^ expected enum `std::option::Option`, found enum `std::result::Result`
   |
   = note: expected type `std::option::Option<{integer}>`
              found type `std::result::Result<_, _>`

error[E0308]: mismatched types
  --> $DIR/issue-13466.rs:24:9
   |
LL |         Err(e) => panic!(e)
   |         ^^^^^^ expected enum `std::option::Option`, found enum `std::result::Result`
   |
   = note: expected type `std::option::Option<{integer}>`
              found type `std::result::Result<_, _>`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
